# Crawler_Suman

./: CMakeLists.txt  main.cpp
docs/buildlogs/day1/: build_log1.md  build_log2  build_log3.md
docs/buildlogs/day2/: build_log1.md  build_log2.md  build_log3.md  build_log4.md
docs/buildlogs/day3/: build_log1.md  build_log2.md  build_log3.md  build_log4.md
docs/buildlogs/day4/: build_log1.md  build_log2.md  build_log3.md  build_log4.md
docs/buildlogs/day5/: build_log1.md  build_log2.md  build_log3.md  build_log4.md
docs/dailylogs/: day1  day1.md  day2.md  day3.md  day4.md  day5.md
docs/designProposal/: FrontierDesignProposalV2.md  PageStorageDesignProposalV2.md  SeenStoreDesignProposalV2.md  crawlerDesignProposal.md  crawlerDesignProposalV2.md  frontierDesignProposal.md  pageStorageDesignProposal.md  seenStoreDesignProposal.md
include/: Database.h  FetchResult.h  Fetcher.h  Frontier.h  LinkExtractor.h  PageStorage.h  SeenStore.h  URLNormalizer.h  crawler.h
src/: Database.cpp  Fetcher.cpp  Frontier.cpp  LinkExtractor.cpp  PageStorage.cpp  SeenStore.cpp  URLNormalizer.cpp  crawler.cpp
